--- a/src/components/FetchingData/FetchedSubPosts.css
+++ b/src/components/FetchingData/FetchedSubPosts.css
@@ -4,14 +4,15 @@
 }
 
 .sub-posts{
-    height: 100vh;
-    overflow: auto;
+    display: inline-block;
+    height: calc(100% - var(--subLogHeight));
+    width: 100%;
+    overflow-y: auto;
 }
 
 .post-container{
-    --fontFamily:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-family: var(--fontFamily);
-    width: 20%;
+    width: 100%;
     padding: 0.5rem;
 }
 
@@ -28,7 +29,6 @@
 }
 
 .post-icon {
-    --icon-size:15px;
     width: var(--icon-size);
     height: var(--icon-size);
     object-fit: contain;
