--- a/src/components/DisplaySubreddit/DisplaySubredditData.css
+++ b/src/components/DisplaySubreddit/DisplaySubredditData.css
@@ -18,8 +18,8 @@
  }
 
 .complete-sub{
-    display: inline-block;
-    height: 100vh;
+    display: block;
+    height: calc(100vh - 70px);
     width: var(--postWidth);
 }
 .sub-log{
