ADDED Navigation and closing of subreddit if not found

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -32,6 +32,12 @@
     width: 70px;
 }
 
+.github-link{
+    text-decoration: none;
+    color: inherit;
+    border: 1px solid inherit;
+}
+
 .dark-mode-on{
     background-color: rgb(43, 43, 43);
     color: aliceblue;
