--- a/src/components/DisplaySubreddit/DisplaySubredditData.css
+++ b/src/components/DisplaySubreddit/DisplaySubredditData.css
@@ -19,7 +19,7 @@
 
 .complete-sub{
     display: block;
-    height: calc(100vh - 70px);
+    height: 100%;
     width: var(--postWidth);
     border: 2px solid;
     border-top: 0;
