header border color updated

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header-section{
     height: 70px;
     width: 100%;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid;
 }
 
 .header-section>*{
