Search Button Component needs no parameter

--- a/src/components/DisplaySubreddit/DisplaySubredditData.css
+++ b/src/components/DisplaySubreddit/DisplaySubredditData.css
@@ -29,6 +29,7 @@
     min-height: var(--subLogHeight);
     font-size:x-large;
     font-weight: bolder;
+    border-bottom: 2px solid;
 }
 
 .sub-log-icon{
