--- a/src/components/DisplaySubreddit/DisplaySubredditData.css
+++ b/src/components/DisplaySubreddit/DisplaySubredditData.css
@@ -23,7 +23,7 @@
     width: var(--postWidth);
     border: 2px solid;
     border-top: 0;
-    
+    border-left: 0;
 }
 .sub-log{
     min-height: var(--subLogHeight);
